# prysm

./: BUILD.bazel  CONTRIBUTING.md  go.mod  go.sum
.github/workflows/: changelog.yml
api/client/openapi/: client.go
beacon-chain/blockchain/: process_attestation_test.go  receive_attestation.go  receive_attestation_test.go  service.go  service_test.go
beacon-chain/db/: errors.go
beacon-chain/db/kv/: error.go
beacon-chain/node/: node.go
beacon-chain/p2p/encoder/: BUILD.bazel
beacon-chain/rpc/prysm/v1alpha1/beacon/: blocks.go
beacon-chain/state/v1/: state_trie.go
beacon-chain/state/v2/: state_trie.go
changelog/: kasey_changelog-tool.md  kasey_example.md
cmd/beacon-chain/: usage.go
cmd/beacon-chain/flags/: base.go
cmd/prysmctl/checkpoint/: save.go
cmd/prysmctl/get/: block.go  state.go
cmd/ssz/: BUILD.bazel  benchmark.go  generate.go  main.go
config/params/: config.go  config_test.go
proto/beacon/p2p/v1/: BUILD.bazel  methodical.ssz.go
proto/eth/v1/: BUILD.bazel  methodical.ssz.go
proto/eth/v1alpha1/: BUILD.bazel  aaap.ssz.go  methodical.ssz.go
proto/sniff/: initialize.go  sniffer.go
spectest/shared/phase0/ssz_static/: BUILD.bazel  ssz_static.go
sszgen/: BUILD.bazel  indexer.go  indexer_test.go  output.go  parser.go  parser_test.go  render.go  representer.go  representer_test.go  satisfier.go
sszgen/backend/: BUILD.bazel  bool.go  byte.go  caster.go  container.go  container_test.go  genhtr.go  genhtr_test.go  list.go  overlay.go  pointer.go  render.go  render_test.go  uint.go  union.go  vector.go
sszgen/backend/testdata/: TestGenerateContainer_GenerateMarshalSSZ.expected  TestGenerateContainer_GenerateSizeSSZ.expected  TestUnmarshalSteps.expected
sszgen/testdata/: BUILD.bazel  simple.go  types.pb.go
sszgen/testutil/: BUILD.bazel
sszgen/types/: BUILD.bazel  bool.go  byte.go  container.go  container_test.go  list.go  overlay.go  pointer.go  uint.go  union.go  valrep.go  vector.go
