load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "indexer.go",
        "output.go",
        "parser.go",
        "render.go",
        "representer.go",
        "satisfier.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/sszgen",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_tools//go/packages:go_default_library"],
)
