load("@io_bazel_rules_go//go:def.bzl", "go_test")
load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "indexer.go",
        "output.go",
        "parser.go",
        "render.go",
        "representer.go",
        "satisfier.go",
        "tagparse.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/sszgen",
    visibility = ["//visibility:public"],
    deps = [
        "//sszgen/types:go_default_library",
        "@org_golang_x_tools//go/packages:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "indexer_test.go",
        "parser_test.go",
        "representer_test.go",
        "tagparse_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//shared/testutil/require:go_default_library"],
)
