load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "generate.go",
        "ir.go",
        "main.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/cmd/ssz",
    visibility = ["//visibility:private"],
    deps = [
        "//sszgen:go_default_library",
        "//sszgen/backend:go_default_library",
        "//sszgen/testutil:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)

go_binary(
    name = "ssz",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
