load("@io_bazel_rules_go//go:def.bzl", "go_test")
load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bool.go",
        "byte.go",
        "caster.go",
        "container.go",
        "list.go",
        "overlay.go",
        "pointer.go",
        "render.go",
        "uint.go",
        "union.go",
        "vector.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/sszgen/backend",
    visibility = ["//visibility:public"],
    deps = ["//sszgen/types:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "container_test.go",
        "render_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//shared/testutil/require:go_default_library",
        "//sszgen/types:go_default_library",
    ],
)
