load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bool.go",
        "byte.go",
        "container.go",
        "list.go",
        "uint.go",
        "union.go",
        "valrep.go",
        "vector.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/sszgen/types",
    visibility = ["//visibility:public"],
)
